--- a/static/css/todos.css
+++ b/static/css/todos.css
@@ -1,6 +1,5 @@
 *{ margin: 0; padding: 0; text-align: center;
 	font-family: "source-sans-pro", "Source Sans Pro", "Helvetica Neue", Arial, sans-serif;
-	color: #074659;
 	list-style: none;
 }
 body{
@@ -16,31 +15,67 @@ h1, h4{
 #nav-list{
 	display: inline-block;
 }
-.nav-item{
+.nav-item, .nav-item-selected{
+	color: #074659;
 	float: left;
 	margin: 10px;
 	padding: 5px;
-	border: 1px solid black;
+	cursor: pointer;
+	background-color: #d3d3d3;
 }
-.todo{
+.nav-item{border: 1px solid black;}
+.nav-item:hover, .nav-item:active, .nav-item-selected:hover, .nav-item-selected:active{
+	background-color: #939393;
+}
+.nav-item-selected{border: 2px solid purple;}
+.todo-list li{
 	display: inline-block;
 	width: 80%;
+	font-size: 12px;
+	background-color: purple;
+	color: white;
+	padding: 5px;
+	border-radius: 8px;
+	margin: 10px;
+	opacity: 0.9px;
 }
+.todo-list li.done-true{
+	opacity: 0.3;
+}
+.todo-list em{
+	color: white;
+	font-style: normal;
+	font-size: 18px;
+}
+.done-true{
+	text-decoration: line-through;
+}
+.todo-list button{
+	background-color: white;
+	float: left;
+	padding: 5px;
+	border-radius: 8px;
+	cursor: pointer;
+	margin-right: 5px;
+}
+.todo-list span{color: white;}
 .done-False{text-decoration: line-through;}
-.todo-asof{
-	font-size: 14px;
-	width: 200px;
+.add-tags{float: right;}
+.add-tags p{
+	with: 100px;
 }
+
 .todo-description{
 	font-size: 1.4em;
 	width: 60%;
 }
-
-
-form ul{
-	display: inline-block;
+.form-tags{
+	float: right;
+	color: white;
 }
-form li{float: left;}
+.form-tags li{
+	padding: 0;
+}
 
 
 
