--- a/static/css/todos.css
+++ b/static/css/todos.css
@@ -2,11 +2,24 @@
 	font-family: "source-sans-pro", "Source Sans Pro", "Helvetica Neue", Arial, sans-serif;
 	list-style: none;
 }
-body{
-	padding: 20px;
+.float-left{
+	float: left;
+}
+html body{
+	padding: 0; margin: 0; top:0;
+	border-top: 1px solid white;
 }
 ul a{text-decoration: none;}
 h1, h4{color: purple}
+
+#navbar-container{
+	position: fixed;
+	width: 100%;
+	background-color: white;
+	border-bottom: 3px solid orange;
+}
+
+
 #nav-list{
 	display: inline-block;
 }
@@ -23,6 +36,12 @@ h1, h4{color: purple}
 	background-color: #939393;
 }
 .nav-item-selected{border: 3px solid purple;}
+
+
+#todo-container{
+	margin-top: 100px;
+}
+
 .todo-list li{
 	display: inline-block;
 	width: 80%;
@@ -32,7 +51,6 @@ h1, h4{color: purple}
 	padding: 5px;
 	border-radius: 8px;
 	margin: 10px;
-	opacity: 0.9px;
 }
 .todo-list li.done-true{
 	opacity: 0.3;
@@ -48,7 +66,6 @@ h1, h4{color: purple}
 }
 .todo-list button{
 	background-color: white;
-	float: left;
 	padding: 5px;
 	border-radius: 8px;
 	cursor: pointer;
@@ -57,18 +74,18 @@ h1, h4{color: purple}
 .todo-list span{color: white;}
 .done-False{text-decoration: line-through;}
 .add-tags{float: right;}
+.add-tags p{
+	display: inline;
+	margin-right: 10px;
+}
 
 
 .todo-description{
 	font-size: 1.4em;
 	width: 60%;
 }
-.form-tags{
-	float: right;
-	color: white;
-}
-.form-tags li{
-	padding: 0;
+.create-todo-form input{
+	height: 20px;
 }
 
 
